@@ -41,11 +41,13 @@ daroch and ben reed via mahadev)
 
    ZOOKEEPER-232. fix apache licence header in TestableZookeeper (mahadev)
 
+   ZOOKEEPER-249. QuorumPeer.getClientPort() always returns -1. (nitay 
+joffe via mahadev)
+
 IMPROVEMENTS:
    
    ZOOKEEPER-64. Log system env information when initializing server and
 client (pat via mahadev)
-
 
 Release 3.0.0 - 2008-10-21
 
